# SKapsule

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md
.github/workflows/: build-apk.yml
.jules/: setup-script.sh
launcher/: .gitignore  build.gradle.kts  keystore.properties.template  settings.gradle.kts
launcher/app/: build.gradle.kts  proguard-rules.pro
launcher/app/src/main/: AndroidManifest.xml
launcher/app/src/main/assets/jre25/: version
launcher/app/src/main/cpp/: CMakeLists.txt  sklauncher.c  xdgopen.c
launcher/app/src/main/java/com/skarm/launcher/: CacioInstaller.kt  FrenchpressInstaller.kt  GameActivity.kt  ImeBridgeView.kt  JreInstaller.kt  LauncherActivity.kt  LogExporter.kt  LwjglInstaller.kt  NativeBridge.kt  PrefsInstaller.kt  SkApplication.kt  SkInstaller.kt  SteamAuthService.kt
launcher/app/src/main/java/com/skarm/launcher/touch/: TouchControlModels.kt  TouchControlOverlay.kt  TouchControlViews.kt
launcher/app/src/main/res/layout/: activity_game.xml  activity_launcher.xml
launcher/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
launcher/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
launcher/bootstrap/: build.gradle.kts
launcher/bootstrap/src/main/java/org/lwjgl/glfw/: GLFW.java
launcher/bootstrap/src/stubs/java/co/frenchpress/: CredentialPrompt.java  Credentials.java
scripts/: build-cacio-android.sh  build-frenchpress-android.sh  build-gl4es-android.sh  build-lwjgl3-android.sh  build-openal-android.sh  gl4es-overrides.cmake  stage-launcher-assets.sh
(+5 files in other folders)
